name:               twelfppr
version:            0.1
homepage:           http://sigkill.dk
synopsis:           A tool for prettyprinting Twelf signatures.
description:
    The Twelf prettyprinter is a program that can prettyprint
    Twelf signatures in traditional logic notation.
category:           Prettyprinting
license:            BSD3
license-file:       LICENSE
author:             Troels Henriksen
maintainer:         athas@sigkill.dk
extra-source-files: README
cabal-version:      >= 1.6
build-type:         Simple

flag testing
    description: Testing mode, only build minimal components
    default: False

executable twelfppr
    Build-Depends:
      base             >= 4.5  && < 5,
      mtl              >= 2.0  && < 3,
      unix             >= 2.5  && < 3,
      time             >= 1.4  && < 2,
      containers       >= 0.4  && < 1,
      parsec           >= 3.0  && < 4,
      filepath         >= 1.0  && < 2,
      process          >= 1.1  && < 2,
      MonadCatchIO-mtl >= 0.2  && < 0.3,
      regex-compat     >= 0.95 && < 1,
      parco            >= 0.1  && < 1

    main-is:            TwelfPPR.lhs
    other-modules:      TwelfPPR.InfGen
                        TwelfPPR.LaTeX
                        TwelfPPR.LF
                        TwelfPPR.Main
                        TwelfPPR.Parser
                        TwelfPPR.Pretty
                        TwelfPPR.PrettyAnno
                        TwelfPPR.GrammarGen
                        TwelfPPR.Reconstruct
                        TwelfPPR.TwelfServer
                        TwelfPPR.Util

    ghc-options:        -funbox-strict-fields -Wall
    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror
    if flag(testing)
        build-depends:  random
